# ip-cloud

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
accounts/: adapters.py  admin.py  apps.py  forms.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_accounts_deleted_historicalaccounts_deleted.py  0002_alter_accounts_options_and_more.py  0003_alter_accounts_alias_alter_historicalaccounts_alias.py
accounts/models/: __init__.py  managers.py  models.py
accounts/templates/: confirm_email.html  login.html  rest_password.html  signup.html  verification.html
accounts/templates/accounts/: confirm_email.html  login.html  rest_password.html  signup.html  verification.html
accounts/templates/user/: info.html
app/: views.py
app/templates/: index.html
compute/: models.py  urls.py
compute/migrations/: 0001_initial.py  0002_initial.py
compute/minecraft/: apps.py  models.py  urls.py  views.py
compute/minecraft/migrations/: 0001_initial.py  (+1 more)
config/: asgi.py  celery.py  template.py  urls.py  wsgi.py
config/settings/: development.py  production.py  settings.py
deploy/development/: Dockerfile  docker-compose.yaml
index/: urls.py  views.py
kafka/: producer.py
network/: models.py  urls.py
network/migrations/: 0001_initial.py
network/models/: models.py
region/: models.py
region/migrations/: 0001_initial.py
templates/layout/: layout_vertical.html  master.html
terraform/storage/: .terraform.lock.hcl  main.tf  variable.tf
utility/admin/: __init__.py  base_admin.py
utility/model/: __init__.py  managers.py  models.py
utility/notification/: email.py
utility/template/: __init__.py  context_processors.py  theme.py
(+26 files in other folders)
